objects/tdc_cti__Key_Presses__c/tdc_cti__Key_Presses__c.object-meta.xml
<CustomObject>
    <label>Key Presses</label>
    <nameField>
        <label>Key Presses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Presses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>