objects/tdc_cti__Key_Presses__c/fields/tdc_cti__Call_Log__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Log__c</fullName>
    <description>This field is used to relate with the parent call log record.</description>
    <label>Call Log</label>
    <referenceTo>tdc_cti__Call_Log__c</referenceTo>
    <relationshipLabel>Key Presses</relationshipLabel>
    <relationshipName>Key_Presses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>