objects/tdc_cti__Key_Presses__c/fields/tdc_cti__Digit__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Digit__c</fullName>
    <description>This field is used to store the key pressed by the customer.</description>
    <label>Digit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>