objects/tdc_cti__Key_Presses__c/fields/tdc_cti__Key_Presses__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Key_Presses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to link the previously pressed digit.</description>
    <label>Key Presses</label>
    <referenceTo>tdc_cti__Key_Presses__c</referenceTo>
    <relationshipLabel>Key Presses</relationshipLabel>
    <relationshipName>Key_Presses</relationshipName>
    <type>Lookup</type>
</CustomField>