objects/tdc_cti__Key_Presses__c/fields/tdc_cti__Step_Details__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Step_Details__c</fullName>
    <description>This field is used to store the IVR entry detail.</description>
    <label>Step Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>